Parser.output
Grammar

    0 $accept: list_of_statements $end

    1 list_of_statements: statement
    2                   | list_of_statements statement

    3 statement: NAME '=' expression ';'

    4 expression: expression '+' expression
    5           | expression '-' expression
    6           | expression '*' expression
    7           | expression '/' expression
    8           | '(' expression ')'
    9           | '-' expression
   10           | NUMBER
   11           | NAME


Terminals, with rules where they appear

$end (0) 0
'(' (40) 8
')' (41) 8
'*' (42) 6
'+' (43) 4
'-' (45) 5 9
'/' (47) 7
';' (59) 3
'=' (61) 3
error (256)
NUMBER (258) 10
NAME (259) 3 11
UMINUS (260)


Nonterminals, with rules where they appear

$accept (14)
    on left: 0
list_of_statements (15)
    on left: 1 2, on right: 0 2
statement (16)
    on left: 3, on right: 1 2
expression (17)
    on left: 4 5 6 7 8 9 10 11, on right: 3 4 5 6 7 8 9


State 0

    0 $accept: . list_of_statements $end

    NAME  shift, and go to state 1

    list_of_statements  go to state 2
    statement           go to state 3


State 1

    3 statement: NAME . '=' expression ';'

    '='  shift, and go to state 4


State 2

    0 $accept: list_of_statements . $end
    2 list_of_statements: list_of_statements . statement

    $end  shift, and go to state 5
    NAME  shift, and go to state 1

    statement  go to state 6


State 3

    1 list_of_statements: statement .

    $default  reduce using rule 1 (list_of_statements)


State 4

    3 statement: NAME '=' . expression ';'

    NUMBER  shift, and go to state 7
    NAME    shift, and go to state 8
    '-'     shift, and go to state 9
    '('     shift, and go to state 10

    expression  go to state 11


State 5

    0 $accept: list_of_statements $end .

    $default  accept


State 6

    2 list_of_statements: list_of_statements statement .

    $default  reduce using rule 2 (list_of_statements)


State 7

   10 expression: NUMBER .

    $default  reduce using rule 10 (expression)


State 8

   11 expression: NAME .

    $default  reduce using rule 11 (expression)


State 9

    9 expression: '-' . expression

    NUMBER  shift, and go to state 7
    NAME    shift, and go to state 8
    '-'     shift, and go to state 9
    '('     shift, and go to state 10

    expression  go to state 12


State 10

    8 expression: '(' . expression ')'

    NUMBER  shift, and go to state 7
    NAME    shift, and go to state 8
    '-'     shift, and go to state 9
    '('     shift, and go to state 10

    expression  go to state 13


State 11

    3 statement: NAME '=' expression . ';'
    4 expression: expression . '+' expression
    5           | expression . '-' expression
    6           | expression . '*' expression
    7           | expression . '/' expression

    '+'  shift, and go to state 14
    '-'  shift, and go to state 15
    '*'  shift, and go to state 16
    '/'  shift, and go to state 17
    ';'  shift, and go to state 18


State 12

    4 expression: expression . '+' expression
    5           | expression . '-' expression
    6           | expression . '*' expression
    7           | expression . '/' expression
    9           | '-' expression .

    $default  reduce using rule 9 (expression)


State 13

    4 expression: expression . '+' expression
    5           | expression . '-' expression
    6           | expression . '*' expression
    7           | expression . '/' expression
    8           | '(' expression . ')'

    '+'  shift, and go to state 14
    '-'  shift, and go to state 15
    '*'  shift, and go to state 16
    '/'  shift, and go to state 17
    ')'  shift, and go to state 19


State 14

    4 expression: expression '+' . expression

    NUMBER  shift, and go to state 7
    NAME    shift, and go to state 8
    '-'     shift, and go to state 9
    '('     shift, and go to state 10

    expression  go to state 20


State 15

    5 expression: expression '-' . expression

    NUMBER  shift, and go to state 7
    NAME    shift, and go to state 8
    '-'     shift, and go to state 9
    '('     shift, and go to state 10

    expression  go to state 21


State 16

    6 expression: expression '*' . expression

    NUMBER  shift, and go to state 7
    NAME    shift, and go to state 8
    '-'     shift, and go to state 9
    '('     shift, and go to state 10

    expression  go to state 22


State 17

    7 expression: expression '/' . expression

    NUMBER  shift, and go to state 7
    NAME    shift, and go to state 8
    '-'     shift, and go to state 9
    '('     shift, and go to state 10

    expression  go to state 23


State 18

    3 statement: NAME '=' expression ';' .

    $default  reduce using rule 3 (statement)


State 19

    8 expression: '(' expression ')' .

    $default  reduce using rule 8 (expression)


State 20

    4 expression: expression . '+' expression
    4           | expression '+' expression .
    5           | expression . '-' expression
    6           | expression . '*' expression
    7           | expression . '/' expression

    '*'  shift, and go to state 16
    '/'  shift, and go to state 17

    $default  reduce using rule 4 (expression)


State 21

    4 expression: expression . '+' expression
    5           | expression . '-' expression
    5           | expression '-' expression .
    6           | expression . '*' expression
    7           | expression . '/' expression

    '*'  shift, and go to state 16
    '/'  shift, and go to state 17

    $default  reduce using rule 5 (expression)


State 22

    4 expression: expression . '+' expression
    5           | expression . '-' expression
    6           | expression . '*' expression
    6           | expression '*' expression .
    7           | expression . '/' expression

    $default  reduce using rule 6 (expression)


State 23

    4 expression: expression . '+' expression
    5           | expression . '-' expression
    6           | expression . '*' expression
    7           | expression . '/' expression
    7           | expression '/' expression .

    $default  reduce using rule 7 (expression)
